Refactored components to use `as const` and types for vairous variables and props instead of just passing in strings. Fixed an type in transitions.scss that was causing issues with the directories. Fixed a z-indexing issue with the directory hero during transitions.

--- a/src/styles/transitions.scss
+++ b/src/styles/transitions.scss
@@ -29,10 +29,8 @@
    * reason (done via JS because the appbar lives in a Svelte component).
    */
   :root.theme-transition main,
-  :root.theme-transition
-    .directory-hero
-    :root.theme-transition
-    .directory-fields {
+  :root.theme-transition .directory-hero,
+  :root.theme-transition .directory-fields {
     view-transition-name: none;
   }
 }
